modified:   index.html 	modified:   main.css 	modified:   main.js

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                 </div>
                 <div class="prompt_output">
                   <h4>Your prompt:</h4>
-                  <form name="frmTest" onSubmit="return false">
-                    <input type="text" name="txtTest">
-                  </form>
+                  <div class="output_box">Your prompt will appear here. Click on the button.</div>
                 </div>
             </div>
             </div>
