More mobile compatibility and better DOM manipulation.

--- a/index.html
+++ b/index.html
@@ -28,16 +28,24 @@
               </ol>
               <div class="prompt_tool">
                 <div class="prompt_input">
-                  <button class="prompt" onclick="generateTopic()">Random Topic</button>
-                  <div class="radioChoices">
-                    <!-- Add input here -->
-                  </div>
+                  <button class="prompt" onclick="generateSAQ()">Random SAQ</button>
                 </div>
                 <div class="prompt_output">
                   <h4>Your prompt:</h4>
-                  <div class="output_box">Your prompt will appear here. Click on the button.</div>
+                  <div class="saq_output_box">Your prompt will appear here. Click on the button.</div>
                 </div>
-            </div>
+              </div>
+              <!--
+              <div class="prompt_tool">
+                <div class="prompt_input">
+                  <button class="prompt" onclick="generateLEQ()">Random LEQ</button>
+                </div>
+                <div class="prompt_output">
+                  <h4>Your prompt:</h4>
+                  <div class="leq_output_box">Your prompt will appear here. Click on the button.</div>
+                </div>
+              </div>
+              -->
             </div>
             <div class="footer"><h5>DISCLAIMER: This application is in no way endorsed by the College Board. AP is a trademark of the 
               College Board.</h5>
